--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
         // --- הגדרות התאמת זמנים ידנית (בדקות) ---
         // שנה את המספרים כאן כדי לתקן את הזמנים אם הם לא תואמים ללוח
-        const SHABBAT_EXIT_OFFSET = 0;   // תיקון יציאת שבת (למשל: רשום 2 כדי להוסיף 2 דקות)
-        const SHABBAT_ENTRY_OFFSET = 11; // תוספת קבועה לכניסת שבת
+        const SHABBAT_EXIT_OFFSET = -7;   // תיקון יציאת שבת (למשל: רשום 2 כדי להוסיף 2 דקות)
+        const SHABBAT_ENTRY_OFFSET = -2; // תוספת קבועה לכניסת שבת
         const ALOT_OFFSET = 14;          // תוספת לעלות השחר
         const TALIT_OFFSET = -2;         // הפחתה מטלית ותפילין
         const TZEIT_OFFSET = -8;         // הפחתה מצאת הכוכבים (אחרי שהוספנו 20 לשקיעה)
@@ -341,4 +341,4 @@
         fetchHebcalData();
     </script>
 </body>
-</html>
+</html>SHABBAT_EXIT_OFFSET
