--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         .digital-clock { font-feature-settings: "tnum"; font-variant-numeric: tabular-nums; }
         .scrollbar-hide::-webkit-scrollbar { display: none; }
         .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
-        /* Modal Animation */
         .modal { transition: opacity 0.25s ease; }
         body.modal-active { overflow-x: hidden; overflow-y: hidden !important; }
     </style>
@@ -126,6 +125,7 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
         import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
 
+        // הגדרות זמנים
         const SHABBAT_EXIT_OFFSET = 0;   
         const SHABBAT_ENTRY_OFFSET = 11; 
         const ALOT_OFFSET = 14;          
@@ -175,7 +175,7 @@
             return str.replace(/, /g, '<br>');
         };
 
-        // --- לוגיקת פופ-אפ (Modal) ---
+        // לוגיקת פופ-אפ
         const modal = document.getElementById('shulModal');
         const closeModal = document.querySelectorAll('.modal-close, .modal-overlay');
 
@@ -187,9 +187,8 @@
 
         closeModal.forEach(el => el.addEventListener('click', toggleModal));
 
-        // הופך אובייקט JS לזמין גלובלית כדי שה-HTML יוכל לקרוא לפונקציה
         window.openShulModal = (shulId) => {
-            const shul = liveShuls.find(s => s.name === shulId || (s.rawTimes && s.name === shulId)); // מציאת הנתון המקורי
+            const shul = liveShuls.find(s => s.name === shulId || (s.rawTimes && s.name === shulId));
             if (!shul) return;
 
             document.getElementById('modalTitle').innerText = shul.name;
@@ -198,18 +197,56 @@
             const mapUrl = `https://www.google.com/maps/search/?api=1&query=$${encodeURIComponent(shul.address || shul.name + " טירת הכרמל")}`;
             document.getElementById('modalNavBtn').href = mapUrl;
 
+            // שיעורים
             const shulLessons = liveLessons.filter(l => l.location === shul.name);
             let lessonsHtml = '';
             if (shulLessons.length > 0) {
-                lessonsHtml = `<div class="bg-orange-50 p-4 rounded-lg mt-4 border border-orange-100"><h4 class="font-bold text-orange-800 mb-2">שיעורים</h4>`;
+                lessonsHtml = `<div class="bg-orange-50 p-4 rounded-lg mt-4 border border-orange-100"><h4 class="font-bold text-orange-800 mb-2">שיעורי תורה</h4>`;
                 shulLessons.forEach(l => {
+                    // הוספת "הרב" אם חסר
+                    let rabbiName = l.rabbi.trim();
+                    if (!rabbiName.startsWith('הרב')) {
+                        rabbiName = 'הרב ' + rabbiName;
+                    }
+
                     lessonsHtml += `
                         <div class="flex justify-between items-start text-sm bg-white p-2 mb-2 rounded border border-orange-200">
-                            <div><span class="font-bold">${l.rabbi}</span> - ${l.title}</div>
+                            <div><span class="font-bold">${rabbiName}</span> - ${l.title}</div>
                             <div class="text-left"><span class="bg-orange-100 px-1 rounded">${l.day}</span> ${l.time}</div>
                         </div>`;
                 });
                 lessonsHtml += `</div>`;
+            }
+
+            // לוח מודעות ושמות - מוצג רק אם יש תוכן
+            let messagesHtml = '';
+            if (shul.message || shul.refuahNames || shul.iluiNishmatNames) {
+                messagesHtml = `<div class="mt-6 space-y-3">`;
+                
+                if (shul.message) {
+                    messagesHtml += `
+                        <div class="bg-blue-100 p-3 rounded-lg border border-blue-200">
+                            <h5 class="font-bold text-blue-900 mb-1 text-sm"><i class="fas fa-bullhorn ml-1"></i> הודעה חשובה:</h5>
+                            <p class="text-sm whitespace-pre-wrap">${shul.message}</p>
+                        </div>`;
+                }
+
+                if (shul.refuahNames) {
+                    messagesHtml += `
+                        <div class="bg-green-50 p-3 rounded-lg border border-green-200">
+                            <h5 class="font-bold text-green-900 mb-1 text-sm"><i class="fas fa-heartbeat ml-1"></i> לרפואה שלמה:</h5>
+                            <p class="text-sm whitespace-pre-wrap">${shul.refuahNames}</p>
+                        </div>`;
+                }
+
+                if (shul.iluiNishmatNames) {
+                    messagesHtml += `
+                        <div class="bg-gray-100 p-3 rounded-lg border border-gray-300">
+                            <h5 class="font-bold text-gray-800 mb-1 text-sm"><i class="fas fa-candle-holder ml-1"></i> לעילוי נשמת:</h5>
+                            <p class="text-sm whitespace-pre-wrap">${shul.iluiNishmatNames}</p>
+                        </div>`;
+                }
+                messagesHtml += `</div>`;
             }
 
             const detailsHtml = `
@@ -257,6 +294,7 @@
                     </div>
                 </div>
                 ${lessonsHtml}
+                ${messagesHtml}
             `;
 
             document.getElementById('modalBody').innerHTML = detailsHtml;
@@ -278,7 +316,6 @@
             container.innerHTML = '';
             
             filteredShuls.forEach(shul => {
-                // לחיצה על הכרטיס מפעילה את הפופ-אפ
                 container.innerHTML += `
                     <div onclick="openShulModal('${shul.name}')" class="card-hover bg-white rounded-2xl shadow-sm border border-slate-100 overflow-hidden flex flex-col h-full fade-in-up group">
                         <div class="p-5 border-b border-slate-100 relative flex-grow group-hover:bg-blue-50/30 transition">
@@ -293,7 +330,7 @@
                                 <div class="flex gap-2 items-center"><span class="font-bold">שחרית:</span> ${shul.shacharit_chol ? shul.shacharit_chol.split(',')[0] + '...' : '-'}</div>
                                 <div class="flex gap-2 items-center"><span class="font-bold">מנחה:</span> ${shul.mincha_chol ? shul.mincha_chol.split(',')[0] + '...' : '-'}</div>
                             </div>
-                            <div class="mt-3 text-center text-blue-500 text-xs font-bold opacity-0 group-hover:opacity-100 transition">לחץ לפרטים מלאים</div>
+                            <div class="mt-3 text-center text-blue-500 text-xs font-bold opacity-0 group-hover:opacity-100 transition">לחץ לפרטים ומודעות</div>
                         </div>
                     </div>`;
             });
