--- a/admin.html
+++ b/admin.html
@@ -51,26 +51,11 @@
             <div id="globalSettingsPanel" class="bg-indigo-50 border border-indigo-200 p-4 rounded-xl mb-6 hidden">
                 <h3 class="text-lg font-bold text-indigo-900 mb-3"><i class="fas fa-clock ml-2"></i>הגדרות זמנים גלובליות (דקות)</h3>
                 <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
-                    <div>
-                        <label class="block font-bold mb-1">כניסת שבת (+)</label>
-                        <input type="number" id="setting_entry" class="w-full p-2 border rounded text-center" value="11">
-                    </div>
-                    <div>
-                        <label class="block font-bold mb-1">יציאת שבת (+)</label>
-                        <input type="number" id="setting_exit" class="w-full p-2 border rounded text-center" value="0">
-                    </div>
-                    <div>
-                        <label class="block font-bold mb-1">עלות השחר (+)</label>
-                        <input type="number" id="setting_alot" class="w-full p-2 border rounded text-center" value="14">
-                    </div>
-                    <div>
-                        <label class="block font-bold mb-1">טלית/תפילין (-)</label>
-                        <input type="number" id="setting_talit" class="w-full p-2 border rounded text-center" value="-2">
-                    </div>
-                    <div>
-                        <label class="block font-bold mb-1">צאת הכוכבים (-)</label>
-                        <input type="number" id="setting_tzeit" class="w-full p-2 border rounded text-center" value="-8">
-                    </div>
+                    <div><label class="block font-bold mb-1">כניסת שבת (+)</label><input type="number" id="setting_entry" class="w-full p-2 border rounded text-center" value="11"></div>
+                    <div><label class="block font-bold mb-1">יציאת שבת (+)</label><input type="number" id="setting_exit" class="w-full p-2 border rounded text-center" value="0"></div>
+                    <div><label class="block font-bold mb-1">עלות השחר (+)</label><input type="number" id="setting_alot" class="w-full p-2 border rounded text-center" value="14"></div>
+                    <div><label class="block font-bold mb-1">טלית/תפילין (-)</label><input type="number" id="setting_talit" class="w-full p-2 border rounded text-center" value="-2"></div>
+                    <div><label class="block font-bold mb-1">צאת הכוכבים (-)</label><input type="number" id="setting_tzeit" class="w-full p-2 border rounded text-center" value="-8"></div>
                 </div>
                 <button id="saveSettingsBtn" class="mt-3 bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700 font-bold w-full md:w-auto">שמור הגדרות זמנים</button>
             </div>
@@ -474,7 +459,15 @@
                 }
 
                 alert('נשמר בהצלחה!');
-                if(isSuperAdmin) resetShulForm();
+                if (isSuperAdmin) {
+                    resetShulForm();
+                } else {
+                    // אם זה גבאי - ריענון הדף כדי שיראה את הנתונים החדשים
+                    location.reload();
+                }
+            }).catch(error => {
+                alert('שגיאה בשמירה: ' + error.message);
+                console.error(error);
             });
         };
 
@@ -740,3 +733,19 @@
     </script>
 </body>
 </html>
+### שלב 3: בדיקת ה-Rules (חשוב מאוד!)
+אם גם אחרי העלאת הקובץ הזה זה לא עובד, זה אומר בוודאות שה-Rules של ה-Database שלך חוסמים כתיבה.
+
+1.  כנס לאתר Firebase Console.
+2.  בחר את הפרויקט `tirat-carmel-shul`.
+3.  בצד שמאל, לחץ על **Realtime Database**.
+4.  למעלה, לחץ על לשונית **Rules**.
+5.  העתק והדבק את הכללים האלו (שמאפשרים לכולם לכתוב - שימושי לאב-טיפוס):
+
+```json
+{
+  "rules": {
+    ".read": true,
+    ".write": true
+  }
+}
